CI(RDM-4): Changed to only apply to pushes and PRs made on main remote branches: development, quality, and production.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,10 +3,14 @@ name: Java Linter
 on:
   push:
     branches:
-      - '**'
+      - 'development'
+      - 'quality'
+      - 'production'
   pull_request:
     branches:
-      - '**'
+      - 'development'
+      - 'quality'
+      - 'production'
 
 jobs:
   Lint:
