CI(RDM-4)/test(RDM-4): Reverted Main for working and changed linter to continue on error. - Pipeline did not count errors because pipeline through error. - Job was completed anyway and changes pushed to repo.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Run Checkstyle and save output
         run: |
           java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt
+        continue-on-error: true
 
       - name: Count warnings and errors
         id: checkstyle
