--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -33,14 +33,14 @@ jobs:
 
       - name: Run Checkstyle and save output
         run: |
-          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt
+          java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt || true
         continue-on-error: true
 
-      - name: Count warnings and errors
-        id: checkstyle
+      - name: Parse Checkstyle output for warnings and errors
+        id: parse_checkstyle
         run: |
-          warnings=$(grep -c 'warning' checkstyle-result.txt || true)
-          errors=$(grep -c 'error' checkstyle-result.txt || true)
+          errors=$(grep -o -E "error" checkstyle-result.txt | wc -l)
+          warnings=$(grep -o -E "warning|WARN" checkstyle-result.txt | wc -l)
           echo "Warnings: $warnings"
           echo "Errors: $errors"
           echo "::set-output name=warnings::$warnings"
@@ -48,7 +48,7 @@ jobs:
 
       - name: Fail if too many warnings or any errors
         run: |
-          if [ ${{ steps.checkstyle.outputs.errors }} -gt 0 ] || [ ${{ steps.checkstyle.outputs.warnings }} -gt 10 ]; then
+          if [ ${{ steps.parse_checkstyle.outputs.errors }} -gt 0 ] || [ ${{ steps.parse_checkstyle.outputs.warnings }} -gt 10 ]; then
             echo "Too many warnings or errors found. Failing the job."
             exit 1
           fi
