--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,7 +13,7 @@ on:
       - 'production'
 
 jobs:
-  Lint:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -67,4 +67,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh workflow run rollback.yml --ref ${{ github.ref_name }}
+          gh workflow run "Rollback on Failure" --ref ${{ github.ref_name }}
