--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -1,6 +1,9 @@
 name: Rollback on Failure
 
 on:
+  push:
+    branches:
+      - "development"
   workflow_run:
     workflows: ["Java Linter"]
     types:
@@ -12,16 +15,16 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Find Last Successful Commit
-      id: find_commit
-      run: |
-        last_good_commit=$(git log --grep="Pipeline passed" -n 1 --format=format:"%H")
-        echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
+      - name: Find Last Successful Commit
+        id: find_commit
+        run: |
+          last_good_commit=$(git log --grep="Pipeline passed" -n 1 --format=format:"%H")
+          echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
 
-    - name: Revert to Last Successful Commit
-      run: |
-        git reset --hard ${{ env.last_good_commit }}
-        git push --force
+      - name: Revert to Last Successful Commit
+        run: |
+          git reset --hard ${{ env.last_good_commit }}
+          git push --force
