CI(RDM-4): Added github_dispatch line to force workflow to run.

--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -6,6 +6,8 @@ on:
     types:
       - completed
 
+  workflow_dispatch:
+
 jobs:
   rollback:
     runs-on: ubuntu-latest
@@ -25,3 +27,4 @@ jobs:
         run: |
           git reset --hard ${{ env.last_good_commit }}
           git push --force
+
