--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Find Last Successful Commit
         id: find_commit
         run: |
-          last_good_commit=$(git log --grep="Pipeline passed" -n 1 --format=format:"%H")
+          last_good_commit=$(git log --tags='pipeline_passed_*' --format=format:"%H" -n 1)
+          echo "Last good commit: $last_good_commit"
           echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
 
       - name: Revert to Last Successful Commit
