--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -30,8 +30,12 @@ jobs:
           echo "Last good commit: $last_good_commit"
           echo "last_good_commit=$last_good_commit" >> $GITHUB_ENV
 
-      - name: Revert to Last Successful Commit
+      - name: Revert to Last Successful Commit (excluding workflow files)
         run: |
           git reset --hard ${{ env.last_good_commit }}
+          git reset --soft HEAD@{1}  # Keep the reset commit but make changes unstaged
+          git restore --staged .github/workflows/  # Exclude workflow files from the commit
+          git commit -m "Revert to last successful commit without changing workflows"
           git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
           git push --force
+
