--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -34,9 +34,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Clean and Build
+        run: mvn clean compile test-compile
+
       - name: Run Unit Tests
-        run: |
-          mvn test
+        run: mvn test
 
       - name: Check Java Version
         run: java -version
@@ -47,23 +49,9 @@ jobs:
       - name: List Compiled Test Classes
         run: ls -R target/test-classes/
 
-      - name: Clean Build
-        run: mvn clean
-
-      - name: Force Recompile
-        run: mvn clean compile test-compile test
-
-      - name: Run Unit Tests
-        run: |
-          mvn test
-
       - name: Publish Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: target/surefire-reports/
-
-      - name: Manual Test Execution
-        run: |
-          find target/test-classes -name '*Test.class' -exec java org.junit.platform.console.ConsoleLauncher -cp target/classes:target/test-classes -c {} \;
