--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build and run tests
-        run: mvn clean test
+        run: mvn test
 
       - name: Archive test results
         if: always()
