--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
                 <version>3.10.0</version>
                 <executions>
                     <execution>
+                        <id>generate-javadocs</id>
                         <goals>
                             <goal>javadoc</goal>
                         </goals>
