--- a/.github/workflows/generate-javadocs.yml
+++ b/.github/workflows/generate-javadocs.yml
@@ -15,7 +15,6 @@ on:
 jobs:
   generate-javadocs:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -28,18 +27,17 @@ jobs:
 
       - name: Generate Javadocs for all modules
         run: |
-          mvn -DexcludePackageNames="" clean -X javadoc:javadoc -DskipTests
+          mvn -DexcludePackageNames="" clean javadoc:javadoc -DskipTests
 
       - name: Upload Javadocs as artifact
-        if: success()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: javadocs
           path: '**/target/site/apidocs'
 
       - name: Deploy Javadocs to GitHub Pages
-        if: success() && github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production'
-        uses: peaceiris/actions-gh-pages@v3
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: './**/target/site/apidocs'
