--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,23 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- JUnit Jupiter Engine for running tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit Platform Commons, required by the JUnit Platform -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.8.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -61,18 +71,6 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
             <version>5.6.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -120,26 +118,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
-            </plugin>
-
-            <!-- Maven Jar Plugin to package your application -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-                            <mainClass>teampixl.com.pixlpos/teampixl.com.pixlpos.POSApplication</mainClass>
-                        </manifest>
-                    </archive>
-                    <excludes>
-                        <exclude>**/test/**</exclude>
-                    </excludes>
-                </configuration>
             </plugin>
 
             <!-- Maven Javadoc Plugin to generate Javadocs -->
@@ -199,128 +177,13 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!-- Maven Assembly Plugin to create a single executable jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>teampixl.com.pixlpos/teampixl.com.pixlpos.POSApplication</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>teampixl.com.pixlpos.application.POSApplicationLauncher</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>windows-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>cmd</executable>
-                            <arguments>
-                                <argument>/c</argument>
-                                <argument>echo Building Windows Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir</argument>
-                                <argument>target\windows</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>copy</argument>
-                                <argument>target\${project.build.finalName}.jar</argument>
-                                <argument>target\windows\${project.build.finalName}.exe</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>linux-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>sh</executable>
-                            <arguments>
-                                <argument>-c</argument>
-                                <argument>echo Building Linux Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir -p target/linux</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>cp target/${project.build.finalName}.jar target/linux/${project.build.finalName}.sh</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>mac-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>sh</executable>
-                            <arguments>
-                                <argument>-c</argument>
-                                <argument>echo Building Mac Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir -p target/mac</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>cp target/${project.build.finalName}.jar target/mac/${project.build.finalName}.app</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
     <repositories>
         <repository>
-            <id>central</id>
+            <id>maven-central</id>
             <url>https://repo.maven.apache.org/maven2</url>
-        </repository>
-        <repository>
-            <id>apache-snapshots</id>
-            <url>https://repository.apache.org/snapshots</url>
-        </repository>
-        <repository>
-            <id>codehaus-mojo</id>
-            <url>https://repository.codehaus.org</url>
         </repository>
     </repositories>
 </project>
