ci/cd: Updated automatic GH page deployment.

--- a/.github/workflows/generate-javadocs.yml
+++ b/.github/workflows/generate-javadocs.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   generate-javadocs:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,17 +28,18 @@ jobs:
 
       - name: Generate Javadocs for all modules
         run: |
-          mvn clean package source:jar javadoc:jar -Peclipse-release -DskipTests -Dpmd.skip=true -Dcheckstyle.skip=true
+          mvn clean package source:jar javadoc:jar -DskipTests -Dpmd.skip=true -Dcheckstyle.skip=true
 
       - name: Upload Javadocs as artifact
         uses: actions/upload-artifact@v4
         with:
           name: javadocs
-          path: '**/target/site/apidocs'
+          path: 'target/site/apidocs/**'
 
       - name: Deploy Javadocs to GitHub Pages
         if: github.event_name == 'push' && (github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: './**/target/site/apidocs'
+          publish_dir: 'target/site/apidocs'
+
