--- a/.github/workflows/generate-javadocs.yml
+++ b/.github/workflows/generate-javadocs.yml
@@ -30,6 +30,11 @@ jobs:
         run: |
           mvn clean package source:jar javadoc:jar -DskipTests -Dpmd.skip=true -Dcheckstyle.skip=true
 
+      - name: Setup Jekyll
+        run: |
+          gem install bundler
+          bundle install
+
       - name: Create .nojekyll file
         run: |
           echo "" > target/site/apidocs/.nojekyll
@@ -42,8 +47,13 @@ jobs:
 
       - name: Deploy Javadocs to GitHub Pages
         if: github.event_name == 'push' && (github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: 'target/site/apidocs'
+        run: |
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git clone --depth=1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+          cd gh-pages
+          cp -r ../target/site/apidocs/* ./
+          git add .
+          git commit -m "Deploy Javadocs from ${{ github.sha }}"
+          git push
 
