--- a/.github/workflows/generate-javadocs.yml
+++ b/.github/workflows/generate-javadocs.yml
@@ -30,22 +30,9 @@ jobs:
         run: |
           mvn clean package source:jar javadoc:jar -DskipTests -Dpmd.skip=true -Dcheckstyle.skip=true
 
-      - name: Install Bundler and Jekyll Dependencies
-        run: |
-          gem install bundler --user-install
-          export PATH="$HOME/.local/share/gem/ruby/3.0.0/bin:$PATH"
-          bundle config set path 'vendor/bundle'  # Recommended configuration instead of --path flag
-          bundle install  # Install Jekyll and dependencies
-
-      - name: Create .nojekyll file
+      - name: Create .nojekyll file in Javadocs
         run: |
           echo "" > target/site/apidocs/.nojekyll
-
-      - name: Upload Javadocs as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: javadocs
-          path: 'target/site/apidocs/**'
 
       - name: Deploy Javadocs to GitHub Pages
         if: github.event_name == 'push' && (github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
@@ -53,8 +40,10 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git clone --depth=1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+          cp -r target/site/apidocs/* gh-pages/
+          touch gh-pages/.nojekyll  # Ensure .nojekyll is at the root of gh-pages
           cd gh-pages
-          cp -r ../target/site/apidocs/* ./
           git add .
           git commit -m "Deploy Javadocs from ${{ github.sha }}"
           git push
+
