--- a/.github/workflows/generate-javadocs.yml
+++ b/.github/workflows/generate-javadocs.yml
@@ -30,18 +30,22 @@ jobs:
         run: |
           mvn clean package source:jar javadoc:jar -DskipTests -Dpmd.skip=true -Dcheckstyle.skip=true
 
-      - name: Create .nojekyll file in Javadocs
-        run: |
-          echo "" > target/site/apidocs/.nojekyll
-
-      - name: Deploy Javadocs to GitHub Pages
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/development' || github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
+      - name: Clone gh-pages branch
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git clone --depth=1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+
+      - name: Copy Javadocs to gh-pages
+        run: |
           cp -r target/site/apidocs/* gh-pages/
-          touch gh-pages/.nojekyll  # Ensure .nojekyll is at the root of gh-pages
+
+      - name: Create .nojekyll in gh-pages
+        run: |
+          touch gh-pages/.nojekyll  
+
+      - name: Deploy to GitHub Pages
+        run: |
           cd gh-pages
           git add .
           git commit -m "Deploy Javadocs from ${{ github.sha }}"
