ci/cd: Updated rollback feature.

--- a/.github/workflows/compendium.yml
+++ b/.github/workflows/compendium.yml
@@ -21,4 +21,11 @@ jobs:
 
   deploy:
     needs: test
+    if: success()
     uses: ./.github/workflows/deploy.yml
+
+  rollback:
+    needs: [lint, build, test]
+    if: failure()
+    uses: ./.github/workflows/rollback.yml
+
