--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,28 +6,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    continue-on-error: true
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 21 (Amazon Corretto)
         uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
           java-version: '21'
 
-      - name: Cache Maven packages
+      - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
 
-      - name: Build and Run Tests
+      - name: Build with Maven
         run: mvn clean install
-
-  rollback:
-    needs: build
-    if: failure() && (github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
-    uses: ./.github/workflows/rollback.yml
