--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Java Linter
 
 on:
   workflow_call:
@@ -6,6 +6,8 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    continue-on-error: true
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,10 +23,16 @@ jobs:
           curl -LJO https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.12.0/checkstyle-10.12.0-all.jar
           mv checkstyle-10.12.0-all.jar /usr/local/bin/checkstyle.jar
 
-      - name: Run Checkstyle and save output
+      - name: Run Checkstyle
         run: |
           java -jar /usr/local/bin/checkstyle.jar -c /google_checks.xml src/ > checkstyle-result.txt 2>&1 || true
-        continue-on-error: true
+
+      - name: Upload Checkstyle Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkstyle-report
+          path: checkstyle-result.txt
 
       - name: Parse Checkstyle output for warnings and errors
         id: parse_checkstyle
@@ -42,7 +50,3 @@ jobs:
             exit 1
           fi
 
-  rollback:
-    needs: lint
-    if: failure() && (github.ref == 'refs/heads/quality' || github.ref == 'refs/heads/production')
-    uses: ./.github/workflows/rollback.yml
