--- a/.github/workflows/compendium.yml
+++ b/.github/workflows/compendium.yml
@@ -20,7 +20,7 @@ jobs:
     uses: ./.github/workflows/test.yml
 
   deploy:
-    needs: test
+    needs: [lint, build, test]
     if: success()
     uses: ./.github/workflows/deploy.yml
 
